# Hokokuji

./: LICENSE.md  README.md  pyproject.toml
data/: tfidf_terms.csv
hoko/: __init__.py  impurity.py  models.py
notebooks/: boosting.ipynb  example.ipynb
